  DatabaseConnection, EntityConnection and RemoteEntityConnection.isValid() removed and merged with isConnected()
  DefaultRemoteEntityConnection.isLocalConnectionValid() removed, EntityConnectionServer uses isConnected() instead
  MethodLogger.Entry.toString() now displays microseconds instead of milliseconds for method time
  LocalEntityConnection.prepareStatement() added
  EntityTestUnit.initializeReferenceEntity() may now return null, handled in setReferenceEntity()
  Copyright bumped to 2016
  ClientValidator added, AbstractServer and EntityConnectionServer modified to use it
  DatabaseConnection.getConnection() overloaded with a validate parameter
  DefaultRemoteEntityConnection, methodLogger only used if enabled, no longer uses methodLogger to determine last usage time
  AbstractConnectionPool now handles the collection of fine grained pool statistics
  DefaultValueMap, protected constructor added with values and originalValues maps as parameters
  DefaultEntity, constructors refactored to use the above
  EntityResultPacker.pack() improved using the above constructor
  DatabaseConnection.getConnection(validate) removed, getConnection() no longer performes any validation
  ClientValidator renamed to ConnectionValidator
  ChinookLoadTest, insertDeleteAlbum scenario added
  EntityLoadTestModel.selectRandomItem(EntityComboBoxModel) added
  LocalEntityConnection, now logs setForeignKeyValues() with methodLogger
  ClientInstanceMonitor, ClientInstanceMonitorPanel, crappy tree view of client log added
  DefaultEntity, minor optimization in the way DefaultEntity.DefaultKey objects are instantiated
  EntityTableModel.InsertAction enum added
  EntityTableModel.setAddEntitiesOnInsert() replaced with setInsertAction()
  DateUtil.getFirst/LastDayOfYear() renamed to getFirst/LastDayOfCurrentYear(), getFirst/LastDayOfYear(year) added