@@ -22,5 +22,5 @@ javax.net.ssl.keyStorePassword=crappypass
 #when running the shutdown command, we need to be able to connect to the server
 javax.net.ssl.trustStore=config/JMinorServerMonitorTruststore
 # uncomment when using the notsoserial library
-#-javaagent:lib/notsoserial-1.0-SNAPSHOT.jar
-#-Dnotsoserial.whitelist=config/notsoserial-whitelist.txt
+#javaagent:lib/notsoserial-1.0-SNAPSHOT.jar
+#notsoserial.whitelist=config/notsoserial-whitelist.txt
